# tutorial_rust_web_questions

./: .gitignore  Cargo.toml  questions.json
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
src/: config.rs  error.rs  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
