[package]
name = "web_questions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
warp = "0.3"
handle-errors = { path = "handle-errors" }

uuid = { version = "1.3", features = ["v4"] }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "migrate", "postgres"]}

reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.5"
rust-argon2 = "1.0.0"
paseto = "2.0.2"
chrono = "0.4.23"
